tests/snapshots/examples_fixtures/basics__factorial.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/factorial.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/factorial.flx:11:1
   |
11 | print("Result:", result);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/factorial.flx:11:1
   |
11 | print("Result:", result);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 2 errors.
== stdout ==
<not executed>
